[package]
name = "limbo_lightning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
sefirot = { path = "../sefirot/sefirot", features = ["bevy"] }
sefirot_grid = { path = "../sefirot/sefirot_grid" }
morton = "0.3.0"
winit = "0.29.0"

[dependencies.luisa_compute]
git = "https://github.com/iMplode-nZ/luisa-compute-rs"
branch = "main"
